--- a/Styles/cars.css
+++ b/Styles/cars.css
@@ -3,22 +3,18 @@ html, body {
     height: 100%;
 }
 
-body::after {
+body{
     background-image: url('../Photos/bmw_cars-background.jpg');
     background-size: cover;
     background-position-x: 0;
     background-position-y: -150px;
     background-repeat: no-repeat;
-    opacity: 100%;
+    opacity: 0;
+    transition: opacity 2s ease-in-out;
 }
 
-body::before {
-    background-image: url('../Photos/bmw_cars-background.jpg');
-    background-size: cover;
-    background-position-x: 0;
-    background-position-y: -150px;
-    background-repeat: no-repeat;
-    opacity: 0%;
+body.loaded::after {
+    opacity: 1; 
 }
 
 
