--- a/Styles/cars.css
+++ b/Styles/cars.css
@@ -62,6 +62,10 @@ h1 {
     transition: transform 0.3s ease-in-out;
 }
 
+a {
+    text-decoration: none;
+}
+
 .grid-item:hover {
     transform: scale(1.05);
 }
