--- a/Styles/main.css
+++ b/Styles/main.css
@@ -1,4 +1,26 @@
-.container
-{
-    
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.main {
+    background-image: url(../Photos/bmwM52024_jpg.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 100vh;
+    width: 100%; 
+    justify-content: center;
+    align-items: center;
+    filter: brightness(80%);
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.7);
+}
+
+.text h1{
+    filter: brightness(100%);
+    color: white;
+    font-size: 2.8em;
+    text-align: center;
+    padding-top: 28%;
 }
