--- a/Styles/cars.css
+++ b/Styles/cars.css
@@ -124,3 +124,9 @@ header h1 a:hover {
 .grid-item a {
     text-decoration: none;
 }
+
+body, html {
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
