--- a/Styles/engines.css
+++ b/Styles/engines.css
@@ -68,7 +68,7 @@ h1 {
 
 .grid-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(5, 1fr); 
     gap: 20px;
     padding: 40px;
 }
@@ -95,9 +95,13 @@ h1 {
 }
 
 .special-engine {
-    background-color: rgba(255, 255, 255, 0.85);
+    position: relative;
+    left: -3%;
+    background-color: #333;
+    color: white;
     padding: 20px;
     border-radius: 10px;
+    width: 97.75%;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     margin: 40px;
     text-align: center;
