--- a/Styles/aboutUs.css
+++ b/Styles/aboutUs.css
@@ -1,4 +1,29 @@
-p
+/* Rechteck erstellen */
+.rectangle {
+    height: 150px; /* Höhe des Rechtecks */ 
+    padding: 20px; /* Innenabstand */
+    margin-top: 20px;
+    box-sizing: border-box;
+    border-radius: 10px; /* Sorgt dafür, dass Padding und Border in die Gesamtgröße einbezogen werden */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
+    position: relative;
+    text-align: left;
+    display: flex;              /* Flexbox aktivieren */
+    flex-direction: column;     /* Vertikale Anordnung */
+    align-items: flex-start;
+}
+div img
 {
-    color: firebrick;
+    position: absolute;   /* Bild absolut positionieren */
+    top: 5px;            /* Abstand vom oberen Rand */
+    right: 10px;          /* Abstand vom rechten Rand */
+    width: 140px;         /* Breite des Bildes */
+    height: 140px;        /* Höhe des Bildes */
+    object-fit: cover;    /* Bild wird zugeschnitten, um die Box auszufüllen */
+    border-radius: 10px;  /* Runde Ecken für das Bild */
+}
+h1
+{
+    text-align: center;
 }
