--- a/Styles/main.css
+++ b/Styles/main.css
@@ -85,6 +85,7 @@
     padding: 40px;
     padding-left: 200px;
     z-index: 1;
+    background-color: black;
 }
 
 .main nav li {
@@ -100,3 +101,15 @@
     color: white;
 }
 
+.main nav li a:hover {
+    text-decoration: underline;
+    color: white;
+}
+
+video {
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+ }
