--- a/styles/main.css
+++ b/styles/main.css
@@ -85,7 +85,6 @@
     padding: 40px;
     padding-left: 200px;
     z-index: 1;
-    background-color: black;
 }
 
 .main nav li {
@@ -113,3 +112,59 @@ video {
     width: 100%;
     height: 100%;
  }
+
+.bottomNav
+{
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    display: flex;
+    padding: 40px;
+    padding-left: 200px;
+    z-index: 1;
+    background-color: black;
+}
+
+.bottomNav li {
+    list-style: none;
+    margin-right: 40px;
+    font-size: 1.5em;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
+.bottomNav li a {
+    text-decoration: none;
+    color: white;
+}
+ 
+.bottomNav nav {
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    padding: 40px;
+    padding-left: 500px;
+    z-index: 1;
+}
+
+.bottomNav nav li {
+    list-style: none;
+    margin-right: 40px;
+    font-size: 1.5em;
+    text-decoration: none;
+    text-transform: uppercase;
+    margin-right: 100px;
+}
+
+.bottomNav nav li a {
+    text-decoration: none;
+    color: white;
+}
+
+.bottomNav nav li a:hover {
+    text-decoration: underline;
+    color: white;
+}
