--- a/styles/main.css
+++ b/styles/main.css
@@ -16,7 +16,7 @@
 }
 
 .logo {
-    position: absolute;
+    position: fixed;
     top: 15px;
     left: 50px;
     height: 10vh;
@@ -60,7 +60,7 @@
 
 
 .main nav {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
@@ -100,6 +100,29 @@ video {
     width: 100%;
     height: 100%;
  }
+
+.video-page .video-text
+{
+    position: absolute;
+    top: 170%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    font-family: "Body-Font", sans-serif;
+}
+
+.video-page .video-text p {
+    color: white;
+    font-size: 1.2em;
+}
+
+.video-page .video-text h1 {
+    color: white;
+    font-size: 2em;
+    margin-bottom: 20px;
+}
 
 .bottomNav
 {
