--- a/styles/main.css
+++ b/styles/main.css
@@ -16,7 +16,7 @@
 }
 
 .logo {
-    position: fixed;
+    position: absolute;
     top: 15px;
     left: 50px;
     height: 10vh;
@@ -60,7 +60,7 @@
 
 
 .main nav {
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
@@ -100,29 +100,6 @@ video {
     width: 100%;
     height: 100%;
  }
-
-.video-page .video-text
-{
-    position: absolute;
-    top: 170%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    font-family: "Body-Font", sans-serif;
-}
-
-.video-page .video-text p {
-    color: white;
-    font-size: 1.2em;
-}
-
-.video-page .video-text h1 {
-    color: white;
-    font-size: 2em;
-    margin-bottom: 20px;
-}
 
 .bottomNav
 {
@@ -179,7 +156,8 @@ video {
     text-decoration: underline;
     color: white;
 }
-  .circle {
+
+.circle {
     position: relative;
     width: 50px;
     height: 50px;
@@ -206,4 +184,29 @@ video {
     color: #ffffff;
     transform: scale(1.2);
   }
-  
+
+.video-page .text 
+{
+    position: absolute;
+    top: 170%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    font-family: "Body-Font", sans-serif;
+}
+
+.video-page .text p {
+    color: white;
+    font-size: 1.2em;
+}
+
+
+.video-page .text h1 {
+    color: white;
+    font-size: 50px;
+    text-align: center;
+    letter-spacing: 5px;
+    margin-bottom: 30px;
+}
