--- a/styles/engines.css
+++ b/styles/engines.css
@@ -10,6 +10,7 @@ body {
     background-size: cover;
     background-position-y: 95px;
     background-repeat: no-repeat;
+    background-color: #2c2b2b;
 }
 
 .logo {
@@ -74,12 +75,22 @@ h1 {
 }
 
 .grid-item {
-    background-color: rgba(255, 255, 255, 0.85);
+    background-color: #565656;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     text-align: center;
     transition: transform 0.3s ease-in-out;
+}
+
+.grid-item h2 {
+    font-size: 1.8rem;
+    color: #ffffff;
+}
+
+.grid-item p {
+    font-size: 1rem;
+    color: #bbbbbb;
 }
 
 .grid-item:hover,
