--- a/styles/loadingAnimation.css
+++ b/styles/loadingAnimation.css
@@ -1,41 +1,35 @@
-.startAnimation {
+/* Container für die Startanimation */
+.start-screen {
     position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background-color: black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    animation: fadeOut 2s forwards;
-    animation-delay: 1.2s;  
+    inset: 0;
+    background: black;
+    display: grid;
+    place-items: center;
+    animation: screenFadeOut 2s forwards 1.2s;
     z-index: 10;
 }
 
-.startAnimation img {
-    position: center;
+.start-screen img {
     width: 120px;
     opacity: 0;
-    animation: fadeInLogo 1s ease-out;
-    animation-delay: 0.1s;
+    animation: logoFadeIn 1s ease-out 0.1s;
 }
 
-@keyframes fadeInLogo {
-    0% {
+@keyframes logoFadeIn {
+    from {
         opacity: 0;
     }
-    100% {
+    to {
         opacity: 1;
     }
 }
 
-@keyframes fadeOut {
-    0% {
+@keyframes screenFadeOut {
+    from {
         opacity: 1;
         visibility: visible;
     }
-    100% {
+    to {
         opacity: 0;
         visibility: hidden;
     }
