--- a/styles/loadingAnimation.css
+++ b/styles/loadingAnimation.css
@@ -1,35 +1,41 @@
-/* Container für die Startanimation */
-.start-screen {
+.startAnimation {
     position: fixed;
-    inset: 0;
-    background: black;
-    display: grid;
-    place-items: center;
-    animation: screenFadeOut 2s forwards 1.2s;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    animation: fadeOut 2s forwards;
+    animation-delay: 1.2s;  
     z-index: 10;
 }
 
-.start-screen img {
+.startAnimation img {
+    position: center;
     width: 120px;
     opacity: 0;
-    animation: logoFadeIn 1s ease-out 0.1s;
+    animation: fadeInLogo 1s ease-out;
+    animation-delay: 0.1s;
 }
 
-@keyframes logoFadeIn {
-    from {
+@keyframes fadeInLogo {
+    0% {
         opacity: 0;
     }
-    to {
+    100% {
         opacity: 1;
     }
 }
 
-@keyframes screenFadeOut {
-    from {
+@keyframes fadeOut {
+    0% {
         opacity: 1;
         visibility: visible;
     }
-    to {
+    100% {
         opacity: 0;
         visibility: hidden;
     }
