--- a/styles/cars.css
+++ b/styles/cars.css
@@ -56,3 +56,11 @@ header {
 .col-lg-3.col-md-4.col-sm-6:hover {
     transform: scale(1.05);
 }
+
+.col-md-6{
+    transition: transform 0.3s ease-out;
+}
+
+.col-md-6:hover {
+    transform: scale(1.03);
+}
