--- a/styles/cars.css
+++ b/styles/cars.css
@@ -64,3 +64,12 @@ header {
 .col-md-6:hover {
     transform: scale(1.03);
 }
+
+.card.bg-dark.text-white.h-100 {
+    transition: transform 0.3s ease-out;
+}
+
+.card.bg-dark.text-white.h-100:hover {
+    transform: scale(1.03);
+}
+
