--- a/styles/aboutUs.css
+++ b/styles/aboutUs.css
@@ -18,6 +18,13 @@ body {
     justify-content: center; 
     margin-left:0px;
 }
+.imagecontainer{
+    display: flex;
+    width: 100vw;
+    height: 200px;
+    justify-content: center; 
+    margin-left:0px;
+}
 .rectangle {
     position: relative;
     flex: 1;
@@ -25,6 +32,7 @@ body {
     padding:15px;
     background-color:#565656;
     color:white;
+    overflow: hidden;
 }
 h1
 {
@@ -46,11 +54,10 @@ h1
     position: absolute; 
     top: 0px;
     right: 0px;
-    width: 20%;
+    width: 10vw;
      height: auto;
      clear: right;
-     max-width:100%;
-     max-height:100%;
+     max-width: 155px;
 }
 nav {
     position: absolute;
