added a video for carousel and designed the first carousel

--- a/styles/main.css
+++ b/styles/main.css
@@ -127,24 +127,40 @@ html, body {
     z-index: inherit;
 }
 
+
 .firstBox img {
     position: relative;
     height: 450px;
     top: 80px;
     left: 7%;
-    z-index: -1;
 }
 
-.firstBox h2 {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    font-family: "Body-Font", sans-serif;
-    z-index: 1;
+.boxContent {
+    background: black;
+    height: 300px;
+    margin-top: 80px;
+    margin-right: 513px;
+    margin-left: 106px;
+    color: white;
+}
+
+.firstBox .boxContent a {
+    position: relative;
+    top: 60px;
+    left: 40px;
+    border-radius: 0px;
+}
+
+.firstBox .boxContent h1 {
+    position: relative;
+    top: 10px;
+    left: 40px;
+}
+
+.firstBox .boxContent p {
+    position: relative;
+    top: 20px;
+    left: 40px;
 }
 
 video {
@@ -211,54 +227,20 @@ video {
     box-shadow: 0 0 15px rgb(72, 0, 255);
 }
 
-.circle {
-    position: relative;
-    width: 50px;
-    height: 50px;
-    border: 3px solid #0078ff;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
 
-.icon {
-    font-size: 24px;
+.carousel-inner h1 {
     color: white;
-    transition: color 0.3s ease, transform 0.3s ease;
-}
-
-.circle:hover {
-    transform: scale(1.1);
-    box-shadow: 0 0 15px rgba(0, 120, 255, 0.6);
-}
-
-.circle:hover .icon {
-    color: #ffffff;
-    transform: scale(1.2);
-}
-
-.video-page .text {
-    position: absolute;
-    top: 170%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    display: flex;
-    flex-direction: column;
+    font-size: 80px;
     text-align: center;
     font-family: "Body-Font", sans-serif;
+    letter-spacing: 20px;
+    font-style: uppercase;
+    margin-bottom: 320px;
 }
 
-.video-page .text p {
+.carousel-inner a {
+    position: relative;
+    text-decoration: none;
     color: white;
-    font-size: 1.2em;
-}
-
-.video-page .text h1 {
-    color: white;
-    font-size: 50px;
-    text-align: center;
-    letter-spacing: 5px;
-    margin-bottom: 30px;
+    top: -20px;
 }
