--- a/styles/aboutUs.css
+++ b/styles/aboutUs.css
@@ -10,6 +10,8 @@ body {
     background-color: #2c2b2b;
     line-height: 1.6;
     overflow-x: hidden;
+    height:100%;
+    margin:0;
 }
 .container {
     display: flex;
@@ -34,11 +36,18 @@ body {
     max-width: 100%;
     position: relative;
 }
-h1
+h1:first-of-type
 {
     text-align: center;
     margin-top: 120px;
     margin-bottom: 6px;
+    font-family: Verdana;
+}
+h1
+{
+    text-align: center;
+    margin-bottom: 6px;
+    font-family: Verdana, Tahoma, Impact;
 }
 .rectangle h2{
     margin-top:-5px;
@@ -94,4 +103,34 @@ nav li a {
     margin-top:-46px;
     margin-bottom:-44px;
     margin-left:-210px;
+}
+.bottomNav {
+    bottom: 0;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 50px;
+    z-index: 1;
+    background-color: black;
+    padding-top:20px;
+}
+
+.bottomNav nav {
+    position: relative;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    padding: 40px;
+    padding-top:0px;
+    padding-bottom:0px;
+}
+
+.bottomNav nav li {
+    flex:0.25;
+}
+
+.bottomNav nav li p {
+    text-decoration: none;
+    color: white;
+    margin-top:0px;
 }
