--- a/styles/aboutUs.css
+++ b/styles/aboutUs.css
@@ -6,14 +6,15 @@ body {
     color: #FFFF;
     background-color: #2c2b2b;
     line-height: 1.6;
-    overflow-x: hidden;
 }
 .container {
     display: flex;
-    width: 100vw;
-    height: 50vh;
-    gap: 5px; 
+    width: 90vw;
+    margin-left: auto;
+    margin-right: auto;
+    height: 50vh; 
     justify-content: center; 
+
 }
 .rectangle {
     flex: 1;
@@ -43,12 +44,12 @@ nav {
     position: absolute;
     top: 0;
     left: 0;
-    width:88%;
+    overflow-x: hidden;
     display: flex;
     align-items: center;
-    padding: 30px;
     padding-left: 200px;
     background-color: black;
+    
 }
 
 nav li {
