--- a/styles/aboutUs.css
+++ b/styles/aboutUs.css
@@ -5,8 +5,6 @@ header{
     overflow:hidden;
 }
 body {
-    font-family: 'Inter', sans-serif;
-    color: #FFFF;
     background-color: #2c2b2b;
     line-height: 1.6;
     overflow-x: hidden;
@@ -72,27 +70,32 @@ h1
     clear: right;
     flex-shrink: 0;
 }
-nav {
+.nav {
     position: absolute;
     top: 0;
     left: 0;
-    width:100%;
+    width: 100%;
     display: flex;
     align-items: center;
+    padding: 40px;
     padding-left: 200px;
-    background-color: black;
-    
+    z-index: 1;
 }
 
-nav li {
+.nav li {
     list-style: none;
     margin-right: 40px;
-    font-size: 1.5em;
-    text-decoration: none;
+    font-family: "Body-Font", sans-serif;
+    font-weight: normal;
+    font-stretch: normal;
+    letter-spacing: 1px;
+    font-size: 17px;
+    line-height: 1.27em;
     text-transform: uppercase;
+    color: white;
 }
 
-nav li a {
+.nav li a {
     text-decoration: none;
     color: white;
 }
