--- a/styles/aboutUs.css
+++ b/styles/aboutUs.css
@@ -1,5 +1,8 @@
 .main {
     position: relative;
+    background-color: #2c2b2b;
+    font-family: 'Arial', sans-serif;
+    color: white;
 }
 header{
     overflow:hidden;
