--- a/styles/main.css
+++ b/styles/main.css
@@ -85,6 +85,7 @@ html, body {
     text-decoration: none;
 }
 
+
 .main nav {
     position: absolute;
     top: 0;
@@ -95,6 +96,7 @@ html, body {
     padding: 40px;
     padding-left: 200px;
     z-index: 1;
+    background: none !important;
 }
 
 .main nav li {
@@ -107,13 +109,41 @@ html, body {
     font-size: 17px;
     line-height: 1.27em;
     text-transform: uppercase;
-    color: white;
 }
 
 .main nav li a {
     text-decoration: none;
     color: white;
 }
+
+.main nav li a:hover {
+    color: white;
+    background-color: transparent !important;
+    font-weight: bold;
+}
+
+.main .dropdown-menu {
+    color: black;
+    background-color: transparent;
+    transition: background-color 0.3s ease;
+}
+
+.dropdown-menu.show {
+    background-color: black;
+}
+
+.main button {
+    color: white;
+    border-color: green;
+}
+
+.main button:hover {
+    background-color: black;
+    color: none;
+    border-color: none;
+}
+
+.main button 
 
 .secondTopic {
     position: relative;
