--- a/styles/infos.css
+++ b/styles/infos.css
@@ -103,13 +103,6 @@ body {
   margin-bottom: 1.5rem;
 }
 
-.col-md-6
-{
-  font-weight: bold;
-  margin-bottom: 1rem;
-  color: #fff;
-}
-
 .brand-specs {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
@@ -194,5 +187,11 @@ body {
 {
   position: relative;
   width: 100%;
-  height: 150px;
+  height: 100px;
+}
+
+.card
+{
+  background: #333333;
+  color: #ffffff;
 }
