--- a/styles/main.css
+++ b/styles/main.css
@@ -143,47 +143,63 @@ html, body {
     border-color: none;
 }
 
-.main button 
-
-.secondTopic {
-    position: relative;
-    padding-top: 100px;
-    padding-bottom: 100px;
+.secondPage .titel {
+    margin-top: 100px;
+    margin-bottom: 50px;
+    margin-left: 110px;
+    font-weight: 500;
+    line-height: 1.2;
+    color: var(--bs-heading-color);
 }
 
-.secondTopic h1 {
-    position: absolute;
-    left: 7%;
-    z-index: inherit;
+.secondPage h1 {
+    margin-top: 100px;
+    margin-bottom: 50px;
+    font-weight: 500;
+    line-height: 1.2;
+    color: var(--bs-heading-color);
 }
 
+
+.boxContainer {
+    display: flex;
+    justify-content: space-between;
+    margin-right: 200px;
+}
+
+.firstBox {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-left: 8%;
+    margin-bottom: 150px;
+}
 
 .firstBox img {
-    position: relative;
-    height: 450px;
-    top: 80px;
-    left: 7%;
+    width: 100%; 
+    max-width: 666px; 
+    height: auto;
 }
 
-.boxContent {
+.firstBox .boxContent {
+    width: 100%; 
+    max-width: 666px; 
     background: black;
-    height: 300px;
-    margin-top: 80px;
-    margin-right: 513px;
-    margin-left: 106px;
     color: white;
+    padding: 20px;
+    box-sizing: border-box;
 }
 
 .firstBox .boxContent a {
     position: relative;
-    top: 60px;
+    bottom: 30px;
     left: 40px;
     border-radius: 0px;
 }
 
 .firstBox .boxContent h1 {
     position: relative;
-    top: 10px;
+    bottom: 70px;
     left: 40px;
 }
 
@@ -192,6 +208,60 @@ html, body {
     top: 20px;
     left: 40px;
 }
+
+.secondBox {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-left: 10%;
+    margin-bottom: 150px;
+}
+
+.secondBox img {
+    width: 100%; 
+    max-width: 700px; 
+}
+
+.secondBox .boxContent {
+    width: 100%; 
+    max-width: 700px; 
+    background: black;
+    color: white;
+    padding: 20px;
+    box-sizing: border-box;
+}
+
+.secondBox .boxContent a {
+    position: relative;
+    bottom: 30px;
+    left: 40px;
+    border-radius: 0px;
+}
+
+.secondBox .boxContent h1 {
+    position: relative;
+    bottom: 70px;
+    left: 40px;
+}
+
+.secondBox .boxContent p {
+    position: relative;
+    top: 20px;
+    left: 40px;
+}
+
+.fade-in {
+    opacity: 0;
+    transform: translateY(50px);
+    transition: opacity 1s ease, transform 1s ease;
+}
+
+.fade-in.visible {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+
 
 video {
     position: relative;
