--- a/styles/main.css
+++ b/styles/main.css
@@ -5,10 +5,10 @@
 }
 
 html, body {
-    margin: 0;
-    padding: 0;
-    width: 100%;
     height: 100%;
+    width: 100%;
+    background-color: #2c2b2b;
+    z-index: -1;
 }
 
 
@@ -31,7 +31,7 @@ html, body {
     left: 50px;
     height: 10vh;
     width: 5%;
-    z-index: 1;
+    z-index: 2;
 }
 
 .christmasvideo
@@ -42,7 +42,7 @@ html, body {
     width: 90.8%;
     height: 100%;
     object-fit: cover;
-    z-index: -1;
+    z-index: 1;
     transform: scale(1.2);
     filter: grayscale(100%);
 }
@@ -95,7 +95,7 @@ html, body {
     align-items: center;
     padding: 40px;
     padding-left: 200px;
-    z-index: 1;
+    z-index: 2;
     background: none !important;
 }
 
@@ -149,7 +149,7 @@ html, body {
     margin-left: 110px;
     font-weight: 500;
     line-height: 1.2;
-    color: var(--bs-heading-color);
+    color: white;
 }
 
 .secondPage h1 {
