--- a/styles/cars.css
+++ b/styles/cars.css
@@ -17,7 +17,11 @@ header {
     position: absolute;
     top: 20px;
     left: 75px;
-    animation: rotate 5s infinite linear;
+    transition: transform 5s ease-out;
+}
+
+.logo:hover {
+    transform: rotate(360deg);
 }
 
 .main
@@ -25,15 +29,6 @@ header {
   position: relative;
   width: 100%;
   height: 175px;
-}
-
-@keyframes rotate {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(360deg);
-    }
 }
 
 .header-nav a {
