--- a/styles/main.css
+++ b/styles/main.css
@@ -28,8 +28,8 @@ html, body {
 .image-container {
     display: inline-block;
     position: absolute;
-    top: 15px;
-    left: 50px;
+    top: 2.5%;
+    left: 6%;
     z-index: 3;
 }
 
