--- a/styles/infos.css
+++ b/styles/infos.css
@@ -25,22 +25,23 @@ body {
 
 }
 
-.logo {
+.image-container {
+  display: inline-block;
   position: absolute;
-  top: 15px;
-  left: 30px;
-  width: 70px;
-  height: 70px;
-  animation: rotate 5s infinite linear;
+  top: 2.5%;
+  left: 6%;
+  z-index: 3;
 }
 
-@keyframes rotate {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.image-container .logo {
+  z-index: 3;
+  height: 80px;
+  transition: transform 1s ease-in-out;
+  transform: rotate(0deg);
+}
+
+.image-container:hover .logo {
+  transform: rotate(1080deg);
 }
 
 .main
