--- a/styles/infos.css
+++ b/styles/infos.css
@@ -50,3 +50,15 @@ body {
   width: 100%;
   height: 100px;
 }
+
+.highlight {
+  background: #e3f2fd;
+  border-left: 4px solid #0072ce;
+  padding: 10px 15px;
+  margin: 20px 0;
+}
+
+#smallerfontsize
+{
+  font-size: 13px;
+}
