--- a/styles/aboutUs.css
+++ b/styles/aboutUs.css
@@ -1,3 +1,22 @@
 .custom-border {
     border: 1px solid #1b1e22 !important;
 }
+
+.image-container {
+    display: inline-block;
+    position: absolute;
+    top: 2.5%;
+    left: 6%;
+    z-index: 3;
+}
+
+.image-container .logo {
+    z-index: 3;
+    height: 80px;
+    transition: transform 1s ease-in-out;
+    transform: rotate(0deg);
+}
+
+.image-container:hover .logo {
+    transform: rotate(1080deg);
+}
