--- a/styles/main.css
+++ b/styles/main.css
@@ -140,6 +140,12 @@ html, body {
     transition: background-color 0.3s ease;
 }
 
+#search-results {
+    padding-top: 1rem;
+    padding-bottom: 2rem;
+}
+
+
 .dropdown-menu.show {
     background-color: black;
 }
