--- a/styles/main.css
+++ b/styles/main.css
@@ -371,3 +371,11 @@ video {
     color: white;
     top: -20px;
 }
+
+.clamp-2 {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
