--- a/CarGame/style.css
+++ b/CarGame/style.css
@@ -57,17 +57,21 @@ body {
     z-index: 2;
   }
 
-  .otherCar {
+  .other-car {
     position: absolute;
-    background-color: red;
-    width: 60px;
-    height: 100px;
-    transition: top 0.2s;
+    width: 100px;
+    height: auto;
+    left: 120px;
+    transform: scale(4);
+    z-index: 2;
+    background-image: url(enemyCar.png);
+    background-size: cover;
   }
+  
   
   #game-over {
   font-size: 48px;
-  color: red;
+  background-image: url(enemyCar.png);
   text-align: center;
   position: absolute;
   top: 50%;
