--- a/CarGame/style.css
+++ b/CarGame/style.css
@@ -64,19 +64,24 @@ body {
     left: 120px;
     transform: scale(4);
     z-index: 2;
-    background-image: url(enemyCar.png);
     background-size: cover;
+  }
+
+  .gameOver
+  {
+    background-color: black;
   }
   
   
   #game-over {
   font-size: 48px;
-  background-image: url(enemyCar.png);
   text-align: center;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  color: white;
+  z-index: 3;
 }
 
 #start-message {
